--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -56,6 +56,7 @@ text-align: justify}
 #Introduction
 
 Detecting admixture, i.e. gene flow between previously isolated populations can shed light into the complex evolutionary history of  populations. The sequencing of the Neandertal [@green_draft_2010] and Denisovan [@reich_genetic_2010] genome revealed admixture events between Neandertals and  modern humans outside of Africa  [@green_draft_2010][@prufer_complete_2013][@fu_early_2015][@fu_genome_2014][@sankararaman_genomic_2014], as well as an independent admixture event between Denisovans and Asian populations[@reich_genetic_2010][@meyer_high-coverage_2012][@sankararaman_combined_2016][@vernot_excavating_2016]. 
+<!-- Vernot et al./ Kim BY proposed a second independent admixture event of Neandertals into est asians due to higher nean ancestru -->
 
 ##Admixture on the genomic level and basic idea how to date it
 On the genomic level, admixture introduces highly divergent chromosomal segments into the admixing population. Over time recombination between parental chromosomes progressively break the introgressed segments apart, reducing their length in each generation. Assuming a constant recombination rate, the length of introgressed segments should be inversibly proportional to time since the admixture event. Assuming the recombination events occuring according to a poisson process the fragment length distribution can by approximated by an exponential distribution, holding the number of generations since the fragments entered the admixing population [@falush_inference_2003][@pool_inference_2009]. Hence, the length distribution of introgressed chromosomal segments can be used to inferre the time since the admixture event, also known as the recombination clock [@pool_inference_2009][@gravel_population_2012]. 
@@ -63,9 +64,13 @@ On the genomic level, admixture introduces highly divergent chromosomal segments
 <!-- constant recombination rate -->
 <!-- same ancestor -->
 
+
 ##The two approaches of obtaining the length of introgressed segments: ALD
 The dating of admixture events is a question of great interrest. The challenge here is to correctly infer the length of the introgressed segments. There are two main approaches to date admixture [@chimusa_dating_nodate]. The first approach uses the admixture-induced linkage disequilibrium (ALD) decay. 
-Gene flow introduces highly divergent archaic segments into the human background. Hence, variants on these archaic segments are expected to be in high linkage disequilibrium to eachother at the time of admixture [@stephens_mapping_1994][@wall_detecting_2000]. As recombination breaks the introgressed chromosomal segments apart each generation, the association between variants on these introgressed segments decays. A pairwise LD between introgressed variants is calculated, using an ascerteinment scheme to filter for the introgressed variants in the admixed population. The pairwise LD as a function of genetic distant is then fitted using an exponential distribution holding a point estimate for the time since the admixture event [@moorjani_history_2011][@loh_inferring_2013]. 
+Gene flow introduces highly divergent archaic segments into the human background. Hence, variants on these archaic segments are expected to be in high linkage disequilibrium to eachother at the time of admixture [@chakraborty_admixture_1988][@stephens_mapping_1994][@wall_detecting_2000]. 
+As recombination breaks the introgressed chromosomal segments apart each generation, the association between variants on these introgressed segments decays as genetic distance increases. A pairwise LD between introgressed variants is calculated, using an ascerteinment scheme to filter for the introgressed variants in the admixed population[@sankararaman_date_2012]. The pairwise LD as a function of genetic distant is then fitted using an exponential distribution holding a point estimate for the time since the admixture event [@moorjani_history_2011][@loh_inferring_2013]. 
+<!-- R Chakraborty and K M Weiss for the idea of using LD -->
+<!-- Ascertainment scheme only nescessary for old admixture when non_ALD and ALD are both short (for recent admixture ALD is strong enough such that non-ALD is negligible) -->
 
 ##The two approaches of obtaining the length of introgressed segments: searching for introgressd haplotypes
 The other approach first tries to infer introgressed haplotypes directly, by partitioning an individuals genome into admixture segments [@gravel_population_2012][@price_sensitive_2009][@lawson_inference_2012]. Multiple methodes are available focusing on different aspects of introgressed haplotypes to infer them [@lawson_inference_2012] [@racimo_signatures_2017][@seguin_orlando_paleogenomics._2014][@vernot_excavating_2016][@skov_detecting_2018]. In the second step, the length distribution of these directly infered introgressed haplotypes can be used for dating.
@@ -81,6 +86,7 @@ First, it is assumed that the length of the introgressed segments is independent
 Second the recombination rate is known. Since the recombination is used as a clock the correct genetic distance between introgressed segments or variants on the segments has to be known. Uncertainties in the genetic map where found to downward bias the time estimates by missing certain recombination events resulting in assuming introgressed segments longer than they actually are.  Sankararaman et al. 2012 suggested a method for accounting for uncertainty in the recombination map by estimating a correction parameter for a given recombination map by comparing the distances between a pair of markers in the map to the number of crossovers that span those markers as observed in a pedigree. This however limits the applicability of the method, since it requires a population-specific map as well as pedigree information to estimate the error in the map [@sankararaman_date_2012][@fu_genome_2014][@sankararaman_combined_2016].
 <!-- add more problems: -->
 <!-- how are recombination maps obtained LD , decode pedigree, different in pops and in time -->
+
 Third, the demography is known. Demographic events such like additional gene flow between the ancestral population and the admixed or deep structure in the ancestral population was previously reported to bias the estimates [@sankararaman_date_2012][@fu_genome_2014][@sankararaman_combined_2016]. 
 
 An additional bias might be introduced in the ALD based dating method since it requires ascertaining the SNPs for admixture informative sites, especially for archaic admixture [@sankararaman_date_2012][@fu_genome_2014]. The problem here is that introgressed variants from the ancestral archaic population are ascertained using only a few sequenced individuals as proxies for the actual introgressing archaic population. These individuals are potentially only distantly related to the actual introgressing population or being older than it, which might result in missing introgressed variants. 
@@ -88,11 +94,12 @@ An additional bias might be introduced in the ALD based dating method since it r
 Finally, the admixture is assumed to happened in only a single generation. This assumption of pulse like events might be violated, since e.g. in the case of archaic and modern human admixture, populations overlapped in some regions  for a long period of time [@higham_timing_2014], potentially resulting in continuous admixture over hundreds of generations.
 Expand:
 <!-- why is single pulse used (mathematically easy) -->
-<!-- what do we want to know (start and eng of the admixture) -->
+<!-- what do we want to know (start and end of the admixture) -->
 <!-- are there such models -->
 
 This study aims to evaluate admixture time estimates, whereby we focus on a well studied example of archaic admixture into modern humans. Those admixture events are long time in the past, with few, potentially distantly related genomes available from the archaics as proxies for the true introgressing population. We are particularly interested in scenarios of long continuous gene flow between archaic and human populations and its signals in the ALD distribution. We introduce a model for continuous admixture, where the migration rate over time is gamma distributed with two parameter, one for the mean time of continuous admixture and one for the duration of the admixture. First, we examining the effect of long continuous admixture on the admixture time estimates in comparison to the effects of the aforementioned model assumptions. Therefore, we quantitatively evaluate the effect of the admixture model, recombination, demography and analysis parameters on the inference. Second, we define the expectation of the resulting segment length distribution for continuous gama distributed admixtue being Lomax distributed, holding a parameter for the duration of admixture. This expectation works for both methods to infer the segments length, either directly or by using the ALD decay. Using this model, we investigate under which scenarios the parameters of the Lomax-distribution can be  accurately  estimated and for which parameters we can distinguish a pulse-like admixture event from a continuous event. Together this critically evaluates the current state of knowledge about different aspects of archaic admixture time.
 
+![Introduction Figure](/home/leonardo_iasi/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Paper_Graphics.pdf)
 
 #Methods
 
