more intro ref included

--- a/References/My_Library_ATE.bib
+++ b/References/My_Library_ATE.bib
@@ -190,6 +190,26 @@
 	pages = {445}
 }
 
+
+@article{chakraborty_admixture_1988,
+	title = {Admixture as a tool for finding linked genes and detecting that difference from allelic association between loci},
+	volume = {85},
+	issn = {0027-8424, 1091-6490},
+	url = {https://www.pnas.org/content/85/23/9119},
+	doi = {10.1073/pnas.85.23.9119},
+	abstract = {Admixture between genetically different populations may produce gametic association between gene loci as a function of the genetic difference between parental populations and the admixture rate. This association decays as a function of time since admixture and the recombination rate between the loci. Admixture between genetically long-separated human populations has been frequent in the centuries since the age of exploration and colonization, resulting in numerous hybrid descendant populations today, as in the Americas. This represents a natural experiment for genetic epidemiology and anthropology, in which to use polymorphic marker loci (e.g., restriction fragment length polymorphisms) and disequilibrium to infer a genetic basis for traits of interest. In this paper we show that substantial disequilibrium remains today under widely applicable situations, which can be detected without requiring inordinately close linkage between trait and marker loci. Very disparate parental allele frequencies produce large disequilibrium, but the sample size needed to detect such levels of disequilibrium can be large due to the skewed haplotype frequency distribution in the admixed population. Such situations, however, provide power to differentiate between disequilibrium due just to population mixing from that due to physical linkage of loci--i.e., to help map the genetic locus of the trait. A gradient of admixture levels between the same parental populations may be used to test genetic models by relating admixture to disequilibrium levels.},
+	pages = {9119--9123},
+	number = {23},
+	journaltitle = {Proceedings of the National Academy of Sciences},
+	shortjournal = {{PNAS}},
+	author = {Chakraborty, R. and Weiss, K. M.},
+	urldate = {2020-01-27},
+	date = {1988-12-01},
+	langid = {english},
+	pmid = {3194414},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/JQB28HJK/Chakraborty and Weiss - 1988 - Admixture as a tool for finding linked genes and d.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/CHQLR5UQ/9119.html:text/html}
+}
+
 @article{moorjani_genetic_2016,
 	title = {A genetic method for dating ancient genomes provides a direct estimate of human generation interval in the last 45,000 years},
 	volume = {113},
