--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -56,10 +56,10 @@ text-align: justify}
 #Introduction
 
 Detecting admixture, i.e. gene flow between previously isolated populations can shed light into the complex evolutionary history of  populations. The sequencing of the Neandertal [@green_draft_2010] and Denisovan [@reich_genetic_2010] genome revealed admixture events between Neandertals and  modern humans outside of Africa  [@green_draft_2010][@prufer_complete_2013][@fu_early_2015][@fu_genome_2014][@sankararaman_genomic_2014], as well as an independent admixture event between Denisovans and Asian populations[@reich_genetic_2010][@meyer_high-coverage_2012][@sankararaman_combined_2016][@vernot_excavating_2016]. 
-<!-- Vernot et al./ Kim BY proposed a second independent admixture event of Neandertals into est asians due to higher nean ancestru -->
+
 
 ##Admixture on the genomic level and basic idea how to date it
-On the genomic level, admixture introduces highly divergent chromosomal segments into the admixing population. Over time recombination between parental chromosomes progressively break the introgressed segments apart, reducing their length in each generation. Assuming a constant recombination rate, the length of introgressed segments should be inversibly proportional to time since the admixture event. Assuming the recombination events occuring according to a poisson process the fragment length distribution can by approximated by an exponential distribution, holding the number of generations since the fragments entered the admixing population [@falush_inference_2003][@pool_inference_2009]. Hence, the length distribution of introgressed chromosomal segments can be used to inferre the time since the admixture event, also known as the recombination clock [@pool_inference_2009][@gravel_population_2012]. 
+On the genomic level, admixture introduces highly divergent chromosomal segments into the admixing population. Over time recombination between parental chromosomes progressively break the introgressed segments apart, reducing their length in each generation [@falush_inference_2003]. Under a constant recombination rate, the length of introgressed segments should be inversibly proportional to time since the admixture event. Assuming the recombination events occuring according to a poisson process, the fragment length distribution can be approximated by an exponential distribution, holding the number of generations since the fragments entered the admixing population [@pool_inference_2009]. Hence, the length distribution of introgressed chromosomal segments can be used to inferre the time since the admixture event, also known as the recombination clock [@pool_inference_2009][@gravel_population_2012]. 
 <!-- Introduce model assumptions here -->
 <!-- constant recombination rate -->
 <!-- same ancestor -->
@@ -68,26 +68,28 @@ On the genomic level, admixture introduces highly divergent chromosomal segments
 ##The two approaches of obtaining the length of introgressed segments: ALD
 The dating of admixture events is a question of great interrest. The challenge here is to correctly infer the length of the introgressed segments. There are two main approaches to date admixture [@chimusa_dating_nodate]. The first approach uses the admixture-induced linkage disequilibrium (ALD) decay. 
 Gene flow introduces highly divergent archaic segments into the human background. Hence, variants on these archaic segments are expected to be in high linkage disequilibrium to eachother at the time of admixture [@chakraborty_admixture_1988][@stephens_mapping_1994][@wall_detecting_2000]. 
-As recombination breaks the introgressed chromosomal segments apart each generation, the association between variants on these introgressed segments decays as genetic distance increases. A pairwise LD between introgressed variants is calculated, using an ascerteinment scheme to filter for the introgressed variants in the admixed population[@sankararaman_date_2012]. The pairwise LD as a function of genetic distant is then fitted using an exponential distribution holding a point estimate for the time since the admixture event [@moorjani_history_2011][@loh_inferring_2013]. 
-<!-- R Chakraborty and K M Weiss for the idea of using LD -->
-<!-- Ascertainment scheme only nescessary for old admixture when non_ALD and ALD are both short (for recent admixture ALD is strong enough such that non-ALD is negligible) -->
+As recombination breaks the introgressed chromosomal segments apart each generation, the association between variants on these introgressed segments decays as genetic distance increases. In case of a recent admixture event, ALD is found over long genetic distances [@patterson_methods_2004] and is therefore easy distinguishable from short range non-ALD [@moorjani_history_2011]. For ancient admixture however, a pairwise LD between introgressed variants is calculated using an ascerteinment scheme to filter for the introgressed variants in the admixed population, since LD fomr admixture and LD from other processes is in a similar range length [@sankararaman_date_2012]. The pairwise LD as a function of genetic distant is then fitted using an exponential distribution holding a point estimate for the time since the admixture event [@moorjani_history_2011][@loh_inferring_2013]. 
+
 
 ##The two approaches of obtaining the length of introgressed segments: searching for introgressd haplotypes
 The other approach first tries to infer introgressed haplotypes directly, by partitioning an individuals genome into admixture segments [@gravel_population_2012][@price_sensitive_2009][@lawson_inference_2012]. Multiple methodes are available focusing on different aspects of introgressed haplotypes to infer them [@lawson_inference_2012] [@racimo_signatures_2017][@seguin_orlando_paleogenomics._2014][@vernot_excavating_2016][@skov_detecting_2018]. In the second step, the length distribution of these directly infered introgressed haplotypes can be used for dating.
 
 ##Dates of archaic introgression obtained so far
-The two approach were used to estimate the Neandertal human admixture to be 37,000–86,000 yBP [@sankararaman_date_2012] as well as 40,510–54,454 yBP (95% CI) [@moorjani_genetic_2016] using modern day genomes and 50,000 to 60,000 yBP using a ancient Genome[@fu_genome_2014]. The Denisovan human admixture was dated to be between 44,000–54,000 yBP [@sankararaman_combined_2016]. Using Papuan individuals revealed two time separated admixture events one in line with previous estimates at 45.7 kya (95% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95% CI 14.4-50.4 kya) [@jacobs_multiple_2019]. An additional Denisovan admixture event was suggested for East-Asian populations by identifying Denisovan segments, which are more diverged from the Denisovan high-coverage genome then previously found segments [@browning_analysis_2018]. Comparing the mean length of the two groups of segments introgressed from divergent Denisovan populations did, however, not reveal significant differnces, suggesting a lack of power to distinguish the two events by time [@browning_analysis_2018][@jacobs_multiple_2019].
+The two approach were used to estimate the Neandertal human admixture to be 37,000–86,000 yBP [@sankararaman_date_2012] as well as 40,510–54,454 yBP (95% CI) [@moorjani_genetic_2016] using modern day genomes and 50,000 to 60,000 yBP using a ancient Genome[@fu_genome_2014]. An additional contemporaneous  admixture event between Neandertals and East Asian population was suggested to explain the higher amount of Neandertal ancestry in these populations [@kim_selection_2015][@vernot_complex_2015]. The Denisovan human admixture was dated to be between 44,000–54,000 yBP [@sankararaman_combined_2016]. Using Papuan individuals revealed two time separated admixture events one in line with previous estimates at 45.7 kya (95% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95% CI 14.4-50.4 kya) [@jacobs_multiple_2019]. An additional Denisovan admixture event was suggested for East-Asian populations by identifying Denisovan segments, which are more diverged from the Denisovan high-coverage genome then previously found segments [@browning_analysis_2018]. Comparing the mean length of the two groups of segments introgressed from divergent Denisovan populations did, however, not reveal significant differnces, suggesting a lack of power to distinguish the two events by time [@browning_analysis_2018][@jacobs_multiple_2019].
 
 ##Assumptions on the data
-Both approaches, the direct measure of the segment length and the indirect ALD based method, without first directly inferring introgressed segments such as the popular ALDER program [@loh_inferring_2013], typically require fairly strong assumptions on the data.
+Both approaches, the direct measure of the segment length and the indirect ALD based method, without first directly inferring introgressed segments such as the popular ALDER program [@loh_inferring_2013], typically require fairly strong assumptions on the data[@pool_inference_2009][@gravel_population_2012][@liang_lengths_2014].
 
 First, it is assumed that the length of the introgressed segments is independent and identically exponentially distributed. This means that the number of ancestors per admixed individual is identical, such that the proportion of introgressed segments is equal among the individuals. Segments are independent such that segments of the same ancestor do not recombine to form longer segments. Liang and Nielsen 2014 showed that the  violation of the independent and identically exponentially distributed segments length assumption can downward bias admixture time estimates when the true admixture time is very  recent, the number of ancestors is small or the admixing population is small. This increases the chance of admixture segments to recombine into a larger segment mimicking a segment length distribution of a more recent admixture[@liang_lengths_2014].
+<!-- Disentengel model and data assumptions -->
+<!-- Pool and Nielsen assumption: no significant inbreeding tracts are rare (no recombination with eachother) -->
+<!-- Gravel 2012: tracts from multiple migrant ancestors -->
 
-Second the recombination rate is known. Since the recombination is used as a clock the correct genetic distance between introgressed segments or variants on the segments has to be known. Uncertainties in the genetic map where found to downward bias the time estimates by missing certain recombination events resulting in assuming introgressed segments longer than they actually are.  Sankararaman et al. 2012 suggested a method for accounting for uncertainty in the recombination map by estimating a correction parameter for a given recombination map by comparing the distances between a pair of markers in the map to the number of crossovers that span those markers as observed in a pedigree. This however limits the applicability of the method, since it requires a population-specific map as well as pedigree information to estimate the error in the map [@sankararaman_date_2012][@fu_genome_2014][@sankararaman_combined_2016].
-<!-- add more problems: -->
-<!-- how are recombination maps obtained LD , decode pedigree, different in pops and in time -->
+Second, it is assumed that the recombination rate is known. Since the recombination is used as a clock the correct genetic distance between introgressed segments or variants on the segments has to be known. Recombination maps are used to assign the genetic length between introgressed segments/variants. Different maps are available. Either focusing on short term information by using parent-offspring data to directly observe recombination events [@coop_high-resolution_2008][@kong_fine-scale_2010] or searching for admixture tracts brakepoints [@hinch_landscape_2011][@wegmann_recombination_2011] or long term population averages of recombination inferred by LD [@mcvean_fine-scale_2004][@myers_fine-scale_2005][@hapmap_consortium_2007]. 
+The genetic maps are highly correlated on a megabase scale but reveal significant population differences on a finer scale [@kong_fine-scale_2010][@hinch_landscape_2011]. Furthermore, recombination maps can also vary over time [@auton_fine-scale_2012]. These uncertainties in the genetic map were found to downward bias the time estimates by missing certain recombination events resulting in assuming introgressed segments longer than they actually are [@sankararaman_date_2012].  Sankararaman et al. 2012 suggested a method for accounting for uncertainty in the recombination map by estimating a correction parameter for a given recombination map by comparing the distances between a pair of markers in the map to the number of crossovers that span those markers as observed in a pedigree map. This however limits the applicability of the method, since it requires a population-specific map as well as pedigree based map to estimate the error in the map [@sankararaman_date_2012][@fu_genome_2014][@sankararaman_combined_2016].
 
 Third, the demography is known. Demographic events such like additional gene flow between the ancestral population and the admixed or deep structure in the ancestral population was previously reported to bias the estimates [@sankararaman_date_2012][@fu_genome_2014][@sankararaman_combined_2016]. 
+<!-- Explain demography using the figure -->
 
 An additional bias might be introduced in the ALD based dating method since it requires ascertaining the SNPs for admixture informative sites, especially for archaic admixture [@sankararaman_date_2012][@fu_genome_2014]. The problem here is that introgressed variants from the ancestral archaic population are ascertained using only a few sequenced individuals as proxies for the actual introgressing archaic population. These individuals are potentially only distantly related to the actual introgressing population or being older than it, which might result in missing introgressed variants. 
 
