Recombination maps included

--- a/References/My_Library_ATE.bib
+++ b/References/My_Library_ATE.bib
@@ -49,15 +49,150 @@
 	pages = {655}
 }
 
+
+@article{wegmann_recombination_2011,
+	title = {Recombination rates in admixed individuals identified by ancestry-based inference},
+	volume = {43},
+	rights = {2011 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	issn = {1546-1718},
+	url = {https://www.nature.com/articles/ng.894},
+	doi = {10.1038/ng.894},
+	abstract = {John Novembre and colleagues present a new approach for constructing recombination maps based on ancestry switch points among individuals. They construct a high-resolution genome-wide recombination map based on admixed African-American and African-Caribbean individuals and compare this to previous recombination maps.},
+	pages = {847--853},
+	number = {9},
+	journaltitle = {Nature Genetics},
+	shortjournal = {Nat Genet},
+	author = {Wegmann, Daniel and Kessner, Darren E. and Veeramah, Krishna R. and Mathias, Rasika A. and Nicolae, Dan L. and Yanek, Lisa R. and Sun, Yan V. and Torgerson, Dara G. and Rafaels, Nicholas and Mosley, Thomas and Becker, Lewis C. and Ruczinski, Ingo and Beaty, Terri H. and Kardia, Sharon L. R. and Meyers, Deborah A. and Barnes, Kathleen C. and Becker, Diane M. and Freimer, Nelson B. and Novembre, John},
+	urldate = {2020-01-28},
+	date = {2011-09},
+	langid = {english},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/NB4RRVYQ/Wegmann et al. - 2011 - Recombination rates in admixed individuals identif.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/SQRSTJJJ/ng.html:text/html}
+}
+
+
+@article{auton_fine-scale_2012,
+	title = {A Fine-Scale Chimpanzee Genetic Map from Population Sequencing},
+	volume = {336},
+	url = {http://science.sciencemag.org/content/336/6078/193.abstract},
+	doi = {10.1126/science.1216872},
+	abstract = {Recombination is an important process in generating diversity and producing selectively advantageous genetic combinations. Thus, changes in recombination hotspots may influence speciation. To investigate the variation in recombination processes in humans and their closest existing relatives, Auton et al. (p. 193, published online 15 March) prepared a fine-scale genetic map of the Western chimpanzee and compared it with that of humans. While rates of recombination are comparable between humans and chimpanzees, the locations and genetic motifs associated with recombination differ between the species.To study the evolution of recombination rates in apes, we developed methodology to construct a fine-scale genetic map from high-throughput sequence data from 10 Western chimpanzees, Pan troglodytes verus. Compared to the human genetic map, broad-scale recombination rates tend to be conserved, but with exceptions, particularly in regions of chromosomal rearrangements and around the site of ancestral fusion in human chromosome 2. At fine scales, chimpanzee recombination is dominated by hotspots, which show no overlap with those of humans even though rates are similarly elevated around {CpG} islands and decreased within genes. The hotspot-specifying protein {PRDM}9 shows extensive variation among Western chimpanzees, and there is little evidence that any sequence motifs are enriched in hotspots. The contrasting locations of hotspots provide a natural experiment, which demonstrates the impact of recombination on base composition.},
+	pages = {193},
+	number = {6078},
+	journaltitle = {Science},
+	shortjournal = {Science},
+	author = {Auton, Adam and Fledel-Alon, Adi and Pfeifer, Susanne and Venn, Oliver and Ségurel, Laure and Street, Teresa and Leffler, Ellen M. and Bowden, Rory and Aneas, Ivy and Broxholme, John and Humburg, Peter and Iqbal, Zamin and Lunter, Gerton and Maller, Julian and Hernandez, Ryan D. and Melton, Cord and Venkat, Aarti and Nobrega, Marcelo A. and Bontrop, Ronald and Myers, Simon and Donnelly, Peter and Przeworski, Molly and {McVean}, Gil},
+	date = {2012-04-13}
+}
+
+@article{coop_high-resolution_2008,
+	title = {High-Resolution Mapping of Crossovers Reveals Extensive Variation in Fine-Scale Recombination Patterns Among Humans},
+	volume = {319},
+	rights = {American Association for the Advancement of Science},
+	issn = {0036-8075, 1095-9203},
+	url = {https://science.sciencemag.org/content/319/5868/1395},
+	doi = {10.1126/science.1151851},
+	abstract = {Recombination plays a crucial role in meiosis, ensuring the proper segregation of chromosomes. Recent linkage disequilibrium ({LD}) and sperm-typing studies suggest that recombination rates vary tremendously across the human genome, with most events occurring in narrow “hotspots.” To examine variation in fine-scale recombination patterns among individuals, we used dense, genome-wide single-nucleotide polymorphism data collected in nuclear families to localize crossovers with high spatial resolution. This analysis revealed that overall recombination hotspot usage is similar in males and females, with individual hotspots often active in both sexes. Across the genome, roughly 60\% of crossovers occurred in hotspots inferred from {LD} studies. Notably, however, we found extensive and heritable variation among both males and females in the proportion of crossovers occurring in these hotspots.
+High-density genotyping of individuals from 82 families shows unexpected variation in the number of meiotic crossovers and in the relative activity of recombination hotspots.
+High-density genotyping of individuals from 82 families shows unexpected variation in the number of meiotic crossovers and in the relative activity of recombination hotspots.},
+	pages = {1395--1398},
+	number = {5868},
+	journaltitle = {Science},
+	author = {Coop, Graham and Wen, Xiaoquan and Ober, Carole and Pritchard, Jonathan K. and Przeworski, Molly},
+	urldate = {2020-01-28},
+	date = {2008-03-07},
+	langid = {english},
+	pmid = {18239090},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/SCQ7IIGB/Coop et al. - 2008 - High-Resolution Mapping of Crossovers Reveals Exte.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/JB7MVHLS/1395.html:text/html}
+}
+
 @article{hinch_landscape_2011,
-	title = {The landscape of recombination in {African} {Americans}},
+	title = {The landscape of recombination in African Americans},
 	volume = {476},
 	url = {https://doi.org/10.1038/nature10336},
-	journal = {Nature},
+	pages = {170},
+	journaltitle = {Nature},
+	shortjournal = {Nature},
 	author = {Hinch, Anjali G. and Tandon, Arti and Patterson, Nick and Song, Yunli and Rohland, Nadin and Palmer, Cameron D. and Chen, Gary K. and Wang, Kai and Buxbaum, Sarah G. and Akylbekova, Ermeg L. and Aldrich, Melinda C. and Ambrosone, Christine B. and Amos, Christopher and Bandera, Elisa V. and Berndt, Sonja I. and Bernstein, Leslie and Blot, William J. and Bock, Cathryn H. and Boerwinkle, Eric and Cai, Qiuyin and Caporaso, Neil and Casey, Graham and Adrienne Cupples, L. and Deming, Sandra L. and Ryan Diver, W. and Divers, Jasmin and Fornage, Myriam and Gillanders, Elizabeth M. and Glessner, Joseph and Harris, Curtis C. and Hu, Jennifer J. and Ingles, Sue A. and Isaacs, William and John, Esther M. and Linda Kao, W. H. and Keating, Brendan and Kittles, Rick A. and Kolonel, Laurence N. and Larkin, Emma and Le Marchand, Loic and McNeill, Lorna H. and Millikan, Robert C. and {Murphy} and Musani, Solomon and Neslund-Dudas, Christine and Nyante, Sarah and Papanicolaou, George J. and Press, Michael F. and Psaty, Bruce M. and Reiner, Alex P. and Rich, Stephen S. and Rodriguez-Gil, Jorge L. and Rotter, Jerome I. and Rybicki, Benjamin A. and Schwartz, Ann G. and Signorello, Lisa B. and Spitz, Margaret and Strom, Sara S. and Thun, Michael J. and Tucker, Margaret A. and Wang, Zhaoming and Wiencke, John K. and Witte, John S. and Wrensch, Margaret and Wu, Xifeng and Yamamura, Yuko and Zanetti, Krista A. and Zheng, Wei and Ziegler, Regina G. and Zhu, Xiaofeng and Redline, Susan and Hirschhorn, Joel N. and Henderson, Brian E. and Taylor Jr, Herman A. and Price, Alkes L. and Hakonarson, Hakon and Chanock, Stephen J. and Haiman, Christopher A. and Wilson, James G. and Reich, David and Myers, Simon R.},
-	month = jul,
-	year = {2011},
-	pages = {170}
+	date = {2011-07-20}
+}
+
+@article{hapmap_consortium_2007,
+	title = {A second generation human haplotype map of over 3.1 million {SNPs}},
+	volume = {449},
+	issn = {0028-0836},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2689609/},
+	doi = {10.1038/nature06258},
+	abstract = {We describe the Phase {II} {HapMap}, which characterizes over 3.1 million human single nucleotide polymorphisms ({SNPs}) genotyped in 270 individuals from four geographically diverse populations and includes 25–35\% of common {SNP} variation in the populations surveyed. The map is estimated to capture untyped common variation with an average maximum r2 of between 0.9 and 0.96 depending on population. We demonstrate that the current generation of commercial genome-wide genotyping products captures common Phase {II} {SNPs} with an average maximum r2 of up to 0.8 in African and up to 0.95 in non-African populations, and that potential gains in power in association studies can be obtained through imputation. These data also reveal novel aspects of the structure of linkage disequilibrium. We show that 10–30\% of pairs of individuals within a population share at least one region of extended genetic identity arising from recent ancestry and that up to 1\% of all common variants are untaggable, primarily because they lie within recombination hotspots. We show that recombination rates vary systematically around genes and between genes of different function. Finally, we demonstrate increased differentiation at non-synonymous, compared to synonymous, {SNPs}, resulting from systematic differences in the strength or efficacy of natural selection between populations.},
+	pages = {851--861},
+	number = {7164},
+	journaltitle = {Nature},
+	shortjournal = {Nature},
+	urldate = {2020-01-07},
+	date = {2007-10-18},
+	pmid = {17943122},
+	pmcid = {PMC2689609},
+	file = {PubMed Central Full Text PDF:/home/leonardo_iasi/Zotero/storage/9TSNEIIY/2007 - A second generation human haplotype map of over 3..pdf:application/pdf}
+}
+
+@article{kong_fine-scale_2010,
+	title = {Fine-scale recombination rate differences between sexes, populations and individuals},
+	volume = {467},
+	rights = {2010 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/nature09525},
+	doi = {10.1038/nature09525},
+	abstract = {Here, human genome-wide single-nucleotide polymorphism ({SNP}) data from more than 15,000 parent–offspring pairs have been used to construct the first recombination maps that are based on directly observed recombination events. The data reveal interesting differences between the sexes: for instance, in males recombination tends to shuffle exons, whereas in females it generates new combinations of nearby genes. Comparison of these maps with others also reveals population differences.},
+	pages = {1099--1103},
+	number = {7319},
+	journaltitle = {Nature},
+	shortjournal = {Nature},
+	author = {Kong, Augustine and Thorleifsson, Gudmar and Gudbjartsson, Daniel F. and Masson, Gisli and Sigurdsson, Asgeir and Jonasdottir, Aslaug and Walters, G. Bragi and Jonasdottir, Adalbjorg and Gylfason, Arnaldur and Kristinsson, Kari Th and Gudjonsson, Sigurjon A. and Frigge, Michael L. and Helgason, Agnar and Thorsteinsdottir, Unnur and Stefansson, Kari},
+	urldate = {2020-01-27},
+	date = {2010-10},
+	langid = {english},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/PB9DY5NY/Kong et al. - 2010 - Fine-scale recombination rate differences between .pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/A9NQDMSN/nature09525.html:text/html}
+}
+
+@article{mcvean_fine-scale_2004,
+	title = {The Fine-Scale Structure of Recombination Rate Variation in the Human Genome},
+	volume = {304},
+	rights = {American Association for the Advancement of Science},
+	issn = {0036-8075, 1095-9203},
+	url = {https://science.sciencemag.org/content/304/5670/581},
+	doi = {10.1126/science.1092500},
+	abstract = {The nature and scale of recombination rate variation are largely unknown for most species. In humans, pedigree analysis has documented variation at the chromosomal level, and sperm studies have identified specific hotspots in which crossing-over events cluster. To address whether this picture is representative of the genome as a whole, we have developed and validated a method for estimating recombination rates from patterns of genetic variation. From extensive single-nucleotide polymorphism surveys in European and African populations, we find evidence for extreme local rate variation spanning four orders in magnitude, in which 50\% of all recombination events take place in less than 10\% of the sequence. We demonstrate that recombination hotspots are a ubiquitous feature of the human genome, occurring on average every 200 kilobases or less, but recombination occurs preferentially outside genes.
+Patterns of sequence variation show that half of the genetic recombination within the human genome occurs in only 10\% of the sequence.
+Patterns of sequence variation show that half of the genetic recombination within the human genome occurs in only 10\% of the sequence.},
+	pages = {581--584},
+	number = {5670},
+	journaltitle = {Science},
+	author = {{McVean}, Gilean A. T. and Myers, Simon R. and Hunt, Sarah and Deloukas, Panos and Bentley, David R. and Donnelly, Peter},
+	urldate = {2020-01-28},
+	date = {2004-04-23},
+	langid = {english},
+	pmid = {15105499},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/CCUGQWCW/McVean et al. - 2004 - The Fine-Scale Structure of Recombination Rate Var.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/7CUH7TIM/581.html:text/html}
+}
+
+@article{myers_fine-scale_2005,
+	title = {A Fine-Scale Map of Recombination Rates and Hotspots Across the Human Genome},
+	volume = {310},
+	rights = {American Association for the Advancement of Science},
+	issn = {0036-8075, 1095-9203},
+	url = {https://science.sciencemag.org/content/310/5746/321},
+	doi = {10.1126/science.1117196},
+	abstract = {Genetic maps, which document the way in which recombination rates vary over a genome, are an essential tool for many genetic analyses. We present a high-resolution genetic map of the human genome, based on statistical analyses of genetic variation data, and identify more than 25,000 recombination hotspots, together with motifs and sequence contexts that play a role in hotspot activity. Differences between the behavior of recombination rates over large (megabase) and small (kilobase) scales lead us to suggest a two-stage model for recombination in which hotspots are stochastic features, within a framework in which large-scale rates are constrained.
+Exchange of {DNA} between chromosome pairs during meiosis has occurred throughout the human genome at many restricted sites located no more than 200,000 bases apart.
+Exchange of {DNA} between chromosome pairs during meiosis has occurred throughout the human genome at many restricted sites located no more than 200,000 bases apart.},
+	pages = {321--324},
+	number = {5746},
+	journaltitle = {Science},
+	author = {Myers, Simon and Bottolo, Leonardo and Freeman, Colin and {McVean}, Gil and Donnelly, Peter},
+	urldate = {2020-01-28},
+	date = {2005-10-14},
+	langid = {english},
+	pmid = {16224025},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/TQ5Y4RZS/Myers et al. - 2005 - A Fine-Scale Map of Recombination Rates and Hotspo.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/3LCXEY2K/321.html:text/html}
 }
 
 @article{schiffels_inferring_2014,
@@ -190,6 +325,62 @@
 	pages = {445}
 }
 
+
+@article{patterson_methods_2004,
+	title = {Methods for High-Density Admixture Mapping of Disease Genes},
+	volume = {74},
+	issn = {0002-9297},
+	url = {http://www.sciencedirect.com/science/article/pii/S0002929707643638},
+	doi = {10.1086/420871},
+	abstract = {Admixture mapping (also known as “mapping by admixture linkage disequilibrium,” or {MALD}) has been proposed as an efficient approach to localizing disease-causing variants that differ in frequency (because of either drift or selection) between two historically separated populations. Near a disease gene, patient populations descended from the recent mixing of two or more ethnic groups should have an increased probability of inheriting the alleles derived from the ethnic group that carries more disease-susceptibility alleles. The central attraction of admixture mapping is that, since gene flow has occurred recently in modern populations (e.g., in African and Hispanic Americans in the past 20 generations), it is expected that admixture-generated linkage disequilibrium should extend for many centimorgans. High-resolution marker sets are now becoming available to test this approach, but progress will require (a) computational methods to infer ancestral origin at each point in the genome and (b) empirical characterization of the general properties of linkage disequilibrium due to admixture. Here we describe statistical methods to estimate the ancestral origin of a locus on the basis of the composite genotypes of linked markers, and we show that this approach accurately estimates states of ancestral origin along the genome. We apply this approach to show that strong admixture linkage disequilibrium extends, on average, for 17 {cM} in African Americans. Finally, we present power calculations under varying models of disease risk, sample size, and proportions of ancestry. Studying ∼2,500 markers in ∼2,500 patients should provide power to detect many regions contributing to common disease. A particularly important result is that the power of an admixture mapping study to detect a locus will be nearly the same for a wide range of mixture scenarios: the mixture proportion should be 10\%–90\% from both ancestral populations.},
+	pages = {979--1000},
+	number = {5},
+	journaltitle = {The American Journal of Human Genetics},
+	shortjournal = {The American Journal of Human Genetics},
+	author = {Patterson, Nick and Hattangadi, Neil and Lane, Barton and Lohmueller, Kirk E. and Hafler, David A. and Oksenberg, Jorge R. and Hauser, Stephen L. and Smith, Michael W. and O’Brien, Stephen J. and Altshuler, David and Daly, Mark J. and Reich, David},
+	urldate = {2020-01-28},
+	date = {2004-05-01},
+	langid = {english},
+	file = {ScienceDirect Full Text PDF:/home/leonardo_iasi/Zotero/storage/2XN6MG4S/Patterson et al. - 2004 - Methods for High-Density Admixture Mapping of Dise.pdf:application/pdf;ScienceDirect Snapshot:/home/leonardo_iasi/Zotero/storage/NI2NYB34/S0002929707643638.html:text/html}
+}
+
+@article{vernot_complex_2015,
+	title = {Complex History of Admixture between Modern Humans and Neandertals},
+	volume = {96},
+	issn = {0002-9297},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4375686/},
+	doi = {10.1016/j.ajhg.2015.01.006},
+	abstract = {Recent analyses have found that a substantial amount of the Neandertal genome persists in the genomes of contemporary non-African individuals. East Asians have, on average, higher levels of Neandertal ancestry than do Europeans, which might be due to differences in the efficiency of purifying selection, an additional pulse of introgression into East Asians, or other unexplored scenarios. To better define the scope of plausible models of archaic admixture between Neandertals and anatomically modern humans, we analyzed patterns of introgressed sequence in whole-genome data of 379 Europeans and 286 East Asians. We found that inferences of demographic history restricted to neutrally evolving genomic regions allowed a simple one-pulse model to be robustly rejected, suggesting that differences in selection cannot explain the differences in Neandertal ancestry. We show that two additional demographic models, involving either a second pulse of Neandertal gene flow into the ancestors of East Asians or a dilution of Neandertal lineages in Europeans by admixture with an unknown ancestral population, are consistent with the data. Thus, the history of admixture between modern humans and Neandertals is most likely more complex than previously thought.},
+	pages = {448--453},
+	number = {3},
+	journaltitle = {American Journal of Human Genetics},
+	shortjournal = {Am J Hum Genet},
+	author = {Vernot, Benjamin and Akey, Joshua M.},
+	urldate = {2020-01-28},
+	date = {2015-03-05},
+	pmid = {25683119},
+	pmcid = {PMC4375686},
+	file = {PubMed Central Full Text PDF:/home/leonardo_iasi/Zotero/storage/U2L48H57/Vernot and Akey - 2015 - Complex History of Admixture between Modern Humans.pdf:application/pdf}
+}
+
+@article{kim_selection_2015,
+	title = {Selection and Reduced Population Size Cannot Explain Higher Amounts of Neandertal Ancestry in East Asian than in European Human Populations},
+	volume = {96},
+	issn = {0002-9297},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4375557/},
+	doi = {10.1016/j.ajhg.2014.12.029},
+	abstract = {It has been hypothesized that the greater proportion of Neandertal ancestry in East Asians than in Europeans is due to the fact that purifying selection is less effective at removing weakly deleterious Neandertal alleles from East Asian populations. Using simulations of a broad range of models of selection and demography, we have shown that this hypothesis cannot account for the higher proportion of Neandertal ancestry in East Asians than in Europeans. Instead, more complex demographic scenarios, most likely involving multiple pulses of Neandertal admixture, are required to explain the data.},
+	pages = {454--461},
+	number = {3},
+	journaltitle = {American Journal of Human Genetics},
+	shortjournal = {Am J Hum Genet},
+	author = {Kim, Bernard Y. and Lohmueller, Kirk E.},
+	urldate = {2020-01-28},
+	date = {2015-03-05},
+	pmid = {25683122},
+	pmcid = {PMC4375557},
+	file = {PubMed Central Full Text PDF:/home/leonardo_iasi/Zotero/storage/B299EJVW/Kim and Lohmueller - 2015 - Selection and Reduced Population Size Cannot Expla.pdf:application/pdf}
+}
 
 @article{chakraborty_admixture_1988,
 	title = {Admixture as a tool for finding linked genes and detecting that difference from allelic association between loci},
